<resources>
    <string name="app_name">YfShortVideo</string>
    <string name="music_short_video">音乐短视频</string>
    <string name="setting_params">设置参数</string>
    <string name="resolution">分辨率</string>
    <string name="encoder_mode">编码模式</string>
    <string name="encoder_avc">H264</string>
    <string name="encoder_hevc">H265</string>
    <string name="quality_base">高清</string>
    <string name="quality_high">超清</string>
    <string name="resolution_360p">360p</string>
    <string name="resolution_540p">540p</string>
    <string name="encode_bitrate">录制码率</string>
    <string name="output_bitrate">输出码率</string>
    <string name="output_frame_rate">输出帧率</string>
    <string name="output_quality">输出画质</string>
    <string name="start_import">本地导入</string>
    <string name="start_experience">开始录制</string>
    <string name="hint_default_encode_bitrate">默认5000kbps</string>
    <string name="hint_default_output_bitrate">默认3000kbps</string>
    <string name="hint_default_output_frame_rate">默认24帧</string>
    <string name="press_to_record">按住拍</string>
    <string name="speed_slower">极慢</string>
    <string name="speed_slow">慢速</string>
    <string name="speed_normal">标准</string>
    <string name="speed_fast">快速</string>
    <string name="speed_faster">极快</string>
    <string name="cut_music">裁剪音乐</string>
    <string name="menu_face_u">ar</string>
    <string name="pass">跳过</string>
    <string name="ar">AR动画</string>
    <string name="cut_video">裁剪视频</string>
    <string name="time_reverse">时光倒流</string>
    <string name="filter">滤镜</string>
    <string name="effect">特效</string>
    <string name="tip_filter">* 长按添加视觉特效</string>
    <string name="tip_logo">* 单击选择水印</string>
    <string name="tip_gif">* 单击选择Gif</string>
    <string name="tip_time">* 单击选择时间特效</string>
    <string name="tip_filter_style">* 单击选择风格滤镜</string>

    <string name="bottom_filter">视觉特效</string>
    <string name="bottom_logo">水印</string>
    <string name="bottom_gif">动图</string>
    <string name="bottom_time">时间特效</string>
    <string name="bottom_fiter_style">风格滤镜</string>
    <string name="time_effect">时间特效</string>
</resources>
