<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_1"
    android:orientation="vertical"
    tools:context="com.yfcloud.shortvideo.activity.SettingActivity">

    <include layout="@layout/header"/>

    <RadioGroup
        android:id="@+id/rg_resolution"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginBottom="@dimen/dp_1"
        android:background="@color/colorBgItemHalf"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/resolution"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_16"/>

        <RadioButton
            android:id="@+id/rb_360"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/resolution_360p"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_16"/>

        <RadioButton
            android:id="@+id/rb_540"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/resolution_540p"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_16"/>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rg_encoder"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginBottom="@dimen/dp_1"
        android:background="@color/colorBgItemHalf"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/encoder_mode"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_16"/>

        <RadioButton
            android:id="@+id/rb_h264"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/encoder_avc"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_16"/>

        <RadioButton
            android:id="@+id/rb_h265"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/encoder_hevc"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_16"/>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rg_quality"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginBottom="@dimen/dp_1"
        android:background="@color/colorBgItemHalf"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/output_quality"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_16"/>

        <RadioButton
            android:id="@+id/rb_low"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:text="@string/quality_base"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_16"/>

        <RadioButton
            android:id="@+id/rb_high"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/quality_high"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_16"/>
    </RadioGroup>

    <LinearLayout
        android:id="@+id/ll_encode_bitrate"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginBottom="@dimen/dp_1"
        android:background="@color/colorBgItemHalf"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/encode_bitrate"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_16"/>


        <EditText
            android:id="@+id/et_encode_bitrate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:hint="@string/hint_default_encode_bitrate"
            android:inputType="number"
            android:maxLength="6"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorHalfTransparentWhite"
            android:textSize="@dimen/sp_16"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginBottom="@dimen/dp_1"
        android:background="@color/colorBgItemHalf"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/output_bitrate"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_16"/>

        <EditText
            android:id="@+id/et_output_bitrate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:hint="@string/hint_default_output_bitrate"
            android:inputType="number"
            android:maxLength="6"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorHalfTransparentWhite"
            android:textSize="@dimen/sp_16"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginBottom="@dimen/dp_1"
        android:background="@color/colorBgItemHalf"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/output_frame_rate"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_16"/>


        <EditText
            android:id="@+id/et_framerate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:hint="@string/hint_default_output_frame_rate"
            android:inputType="number"
            android:maxLength="6"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorHalfTransparentWhite"
            android:textSize="@dimen/sp_16"/>
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btn_import"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/select_start_experience"
                android:text="@string/start_import"
                android:textColor="@color/colorWhite"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btn_start_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/select_start_experience"
                android:text="@string/start_experience"
                android:textColor="@color/colorWhite"/>
        </RelativeLayout>


    </LinearLayout>


</LinearLayout>
